More New services photo, testimonial photos, contact section: contact form, ion card adjustments, spacing between sections, having issues with map and header

--- a/connect-webapp/src/app/components/home/home.page.scss
+++ b/connect-webapp/src/app/components/home/home.page.scss
@@ -1,3 +1,12 @@
+ion-header {
+ font-family: 'San Francisco Display', Arial, sans-serif;
+ color: black;
+ font-size: 20px;
+ weight: bold;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .welcome-section img {
   width: 100%;
   height: auto;
@@ -69,8 +78,8 @@ border-radius: 10px;
 }
 
 .services-section img {
-  width: 85%;
-  height: 300px;
+  width: 90%;
+  height: auto;
 }
 
 .services-section {
@@ -119,13 +128,15 @@ border-radius: 10px;
 .testimonial-card {
   background-color: #f5f5f5;
   border-radius: 8px;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
+  margin-top: 25px;
   margin-bottom: 20px;
 }
 
 .testimonial-card img {
-  width: 150px;
+  width: 100px;
+  height: auto;
   border-radius: 8px;
 }
 
@@ -176,4 +187,51 @@ border-radius: 10px;
 
 .clinic-map {
   /* Add CSS styles for the map container */
+}
+
+.contact-section {
+  text-align: center;
+}
+
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+
+ion-card {
+  min-width: 50% !important;
+  --ion-background-color: #ffffff !important;
+    background: #f1f7fe;
+     overflow: hidden;
+     border-radius: 16px;
+}
+
+ion-card-content {
+font-family: 'San Francisco Display', Arial, sans-serif;
+height: 100%;
+height: 100%;
+
+}
+
+ion-list ion-item {
+color: #205083;
+font-size: 16px;
+font-weight: 500;
+--background: white;
+font-family: 'San Francisco Display', Arial, sans-serif;
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+
 }
